# labki

./: .gitignore
1/: CCVFactory.cpp  CCVFactory.h  CCVTest.cpp  CCVTests.cpp  CCVTests.h  CComplexVector.cpp  CComplexVector.h  CComplexVector0.cpp  CComplexVector1.cpp  CComplexVectorFactory.cpp  CMakeLists.txt  EasyCCVFactory.h  Makefile  ccomplexvector.cpp  ccomplexvector.h  classes.txt  main.cpp
2/: CCVFactory.cpp  CCVTests.cpp  CComplexVector.cpp  CComplexVector.h  CComplexVector0.cpp  CComplexVector1.cpp  CMakeLists.txt  Makefile  main.cpp
4/: .gitignore  README.md  main.py
5/: .gitignore  BMPWriter.h  Box.cpp  CMakeCache.txt  CMakeLists.txt  Color.cpp  Color.h  IntersectResult.h  Makefile  Material.cpp  Material.h  ObjLoader.h  ObjReader.h  Object.h  ObjectFactory.cpp  ObjectFactory.h  Plane.cpp  PointLight.cpp  PointLight.h  ProgressBar.h  Ray.h  Scene.cpp  Scene.h  Shape.h  Sphere.cpp  TODO.md  Tetrahedron.cpp  Triangle.cpp  Vector3.cpp  Vector3.h  cmake_install.cmake  hand.mtl  main.cpp  merge-images.py  program  scene1.txt  scene2.txt  scene3.txt  test.txt
